# projectbotpostback

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements  requirements.txt
src/bot/: config_reader.py  database.py  main.py  templates_env.py  user_status.py
src/bot/handlers/: questions.py
src/bot/keyboards/: for_questions_keyboard.py
src/bot/templates/: answer_kb.txt  answer_yes.txt  not_reg.txt  registration_successful.txt  send_msg.txt  successful .txt
src/bot/user/: actions.py  models.py
src/observer/: main.py
src/server/: main.py
